--- a/mklivecd/src/halt.local.in
+++ b/mklivecd/src/halt.local.in
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/initrd/bin/ash
 #
 # This script is part of mklivecd and is here to:
 #   1) Check if we should eject the CD
@@ -28,7 +28,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: halt.local.in,v 1.4 2003/11/24 13:20:09 jaco Exp $
+# $Id: halt.local.in,v 1.5 2003/12/04 10:37:34 jaco Exp $
 #
 
 # Variables
@@ -37,6 +37,13 @@ MNTLIVECD="/loopfs"
 
 #grep -q noeject /proc/cmdline && exit 0 ||:
 grep -q eject /proc/cmdline || exit 0
+
+# make sure we are the last process to execute
+# (replace current running process)
+if [ ! -f /tmp/.halt.local ]; then
+	echo "" >/tmp/.halt.local
+	exec /initrd/sbin/halt.local
+fi
 
 # We probably want to be able to localise this:
 MSG="Remove the CD, and press [Enter] to power the computer off"
@@ -52,16 +59,17 @@ DEVICE=${DEVICE// *}
 # Unmount the filesystems
 # We can unmount proc now
 #echo "Unmounting /proc"
-#umount /proc 2>/dev/null
+#/initrd/bin/umount /proc 2>/dev/null
 
 echo "Unmounting /initrd$MNTLIVECD"
-umount /initrd$MNTLIVECD 2>/dev/null
+/initrd/bin/umount /initrd$MNTLIVECD 2>/dev/null
 
 # Unload the cloop module before trying to umount/eject CD
-rmmod cloop
+/initrd/sbin/rmmod -a
+/initrd/sbin/rmmod cloop
 
 echo "Unmounting /initrd$MNTCDROM"
-umount /initrd$MNTCDROM 2>/dev/null
+/initrd/bin/umount /initrd$MNTCDROM 2>/dev/null
 
 # Hopefully we are unmounted now, try eject
 echo "Ejecting $DEVICE"
@@ -75,7 +83,7 @@ read key </dev/console
 
 # We can unmount proc now
 echo "Unmounting /proc"
-umount /proc 2>/dev/null
+/initrd/bin/umount /proc 2>/dev/null
 
 #Hope this works ;-)
 /initrd/sbin/halt -i -d -p >/dev/null 2>/dev/null
