--- a/mklivecd/src/halt.local.in
+++ b/mklivecd/src/halt.local.in
@@ -28,7 +28,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: halt.local.in,v 1.5 2003/12/04 10:37:34 jaco Exp $
+# $Id: halt.local.in,v 1.6 2003/12/04 10:39:15 jaco Exp $
 #
 
 # Variables
@@ -62,19 +62,19 @@ DEVICE=${DEVICE// *}
 #/initrd/bin/umount /proc 2>/dev/null
 
 echo "Unmounting /initrd$MNTLIVECD"
-/initrd/bin/umount /initrd$MNTLIVECD 2>/dev/null
+/initrd/bin/umount /initrd$MNTLIVECD #2>/dev/null
 
 # Unload the cloop module before trying to umount/eject CD
 /initrd/sbin/rmmod -a
 /initrd/sbin/rmmod cloop
 
 echo "Unmounting /initrd$MNTCDROM"
-/initrd/bin/umount /initrd$MNTCDROM 2>/dev/null
+/initrd/bin/umount /initrd$MNTCDROM #2>/dev/null
 
 # Hopefully we are unmounted now, try eject
 echo "Ejecting $DEVICE"
 
-/initrd/sbin/eject $DEVICE 2>/dev/null
+/initrd/sbin/eject $DEVICE #2>/dev/null
 
 /initrd/bin/ash < /dev/console 1>/dev/console
 
@@ -83,7 +83,7 @@ read key </dev/console
 
 # We can unmount proc now
 echo "Unmounting /proc"
-/initrd/bin/umount /proc 2>/dev/null
+/initrd/bin/umount /proc #2>/dev/null
 
 #Hope this works ;-)
-/initrd/sbin/halt -i -d -p >/dev/null 2>/dev/null
+/initrd/sbin/halt -i -d -p >/dev/null #2>/dev/null
