--- a/mklivecd/mklivecd.spec.in
+++ b/mklivecd/mklivecd.spec.in
@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.18 2003/12/06 20:33:41 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.19 2003/12/06 20:36:26 jaco Exp $
 
 %define name		mklivecd
 %define version		@MKLIVECDVER@
@@ -29,7 +29,7 @@ Buildarch:		noarch
 
 %install
 rm -rf %buildroot
-%makeinstall DESTDIR=%buildroot
+%makeinstall_std
 
 %clean
 rm -rf %buildroot
