--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -20,7 +20,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.65 2003/12/06 17:31:50 jaco Exp $
+# $Id: hwdetect.in,v 1.66 2003/12/07 11:24:55 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -82,8 +82,8 @@ my $kernel_ver    = qx(uname -r);
 chomp($kernel_ver);
 
 ### progress stuff
-my $progress_now  = 10; # 10 from linuxrc
-my $progress_full = 27; # our 17, +10 from linuxrc
+my $progress_now  = 10; # 10 from linuxrc+rc.sysinit
+my $progress_full = 27; # our 17, +5 from linuxrc, +5 from rc.sysinit
 my $progress_on   = 1;
 my $progress_max  = 65534; # normal: 65534
 
