--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -19,7 +19,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.1 2003/12/07 11:24:55 jaco Exp $
+# $Id: rc.sysinit.in,v 1.2 2003/12/07 13:18:20 jaco Exp $
 #
 
 export PATH=/bin:/sbin:/usr/bin:/usr/sbin:/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin
@@ -338,7 +338,7 @@ setupinit() {
 	fi
 
 	#clean up the shutdown sequence:
-	sed -i.livecd -e 's,\(.*\S*awk\S*.*\)\(\/.*\)\/.*\({next}.*$\),\1\2|\^\\\/initrd\\\/\.\*\/\3,;s,/sbin/halt.local,exec /initrd/sbin/halt.local,g;s,^\(runcmd.*mount.*proc.*\),#\1,g;s,x exec /initrd,x /initrd,g' /etc/rc.d/init.d/halt
+	sed -i.livecd -e 's,\(.*\S*awk\S*.*\)\(\/.*\)\/.*\({next}.*$\),\1\2|\^\\\/initrd\\\/\.\*\/\3,;s,/sbin/halt.local,/initrd/sbin/halt.local,g;s,^\(runcmd.*mount.*proc.*\),#\1,g;s,   /initrd/sbin/halt.local,   exec /initrd/sbin/halt.local \$command,g' /etc/rc.d/init.d/halt
 
 	# restart the splash before MDK init (this is very hacky)
 	silent=`grep -i splash=silent /proc/cmdline`
