--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -20,7 +20,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.66 2003/12/07 11:24:55 jaco Exp $
+# $Id: hwdetect.in,v 1.67 2003/12/07 15:08:48 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -609,6 +609,7 @@ sub hwdetect_getsound {
 
 			# sound card specifics not defaulted in MDK
 			modules::set_options('snd-via82xx', 'index=0 dxs_support=2') if ($card->{driver} =~ /via82xx/);
+			modules::set_options('snd-card-intel8x0', 'snd_ac97_clock=41194') if ($card->{driver} =~ /intel8x0/);
 		}
 		print "modules::add_alias('sound-slot-$num', '".$card->{driver}."')\n" if ($debug);
 		print "modules::set_options(".$card->{driver}.", ".$card->{options}.")\n" if ($debug && $card->{options});
