--- a/mklivecd/mklivecd.spec.in
+++ b/mklivecd/mklivecd.spec.in
@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.22 2003/12/07 17:11:11 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.23 2003/12/12 15:48:41 jaco Exp $
 
 %define name	mklivecd
 %define version	@MKLIVECDVER@
@@ -19,7 +19,17 @@ BuildRoot:	%{_tmppath}/%{name}-root
 Buildarch:	noarch
 
 %description
-%{summary}
+The mklivecd tools are dedicated to providing you with the capability to
+create your own LiveCD from a currently installed Mandrake Linux distribution.
+It can be used to create your own travelling Mandrake-based LiveCD, specialised
+LiveCD feautring custom-developed applications or to put together a demo disk
+to show off the power of our favourite OS. The possibilities are endless!
+
+Created CD's features automatic hardware detection and setup. In addition, it
+utilises compression technology allowing you to build a LiveCD from a partition
+much larger than will typically fit on a CD. (Up to 2GB for a normal 650MB CD.)
+When booting from this LiveCD, the data is transparently decompressed as needed
+with almost no performance impact.
 
 %prep
 %setup -q -n %{name}-@ARCHIVEVER@
@@ -47,6 +57,7 @@ rm -rf %buildroot
 %changelog
 * @SPECDATE@ Jaco Greeff <jaco@linuxminicd.org> @MKLIVECDVER@-@MKLIVECDREL@mdk
 - version @ARCHIVEVER@
+- update description
 
 * Wed Dec 03 2003 Per Øyvind Karlsen <peroyvind@linux-mandrake.com> 0.5.6-2mdk
 - spec fixes
