--- a/mklivecd/src/halt.local.in
+++ b/mklivecd/src/halt.local.in
@@ -11,6 +11,7 @@
 #      either need to have our own halt or pivot_root
 #
 # Copyright (C) 2003, Buchan Milne <bgmilne@cae.co.za>
+# Copyright (C) 2003, Jaco Greeff <jaco@linuxminicd.org>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -28,14 +29,15 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: halt.local.in,v 1.10 2003/12/07 13:22:39 jaco Exp $
+# $Id: halt.local.in,v 1.11 2003/12/13 18:15:14 jaco Exp $
 #
+
+export PATH=/initrd/bin:/initrd/usr/bin:/initrd/sbin:/initrd/usr/sbin:/bin:/usr/bin:/sbin:/usr/sbin
 
 # Variables
 MNTCDROM="/cdrom"
 MNTLIVECD="/loopfs"
-CMD="$1"
-[ -z "$CMD" ] && CMD=/sbin/halt
+HALTCMD="$1"
 
 # should we eject the CD?
 EJECT=1
@@ -44,44 +46,89 @@ grep -q noeject /proc/cmdline && EJECT=
 # We probably want to be able to localise this:
 MSG="Remove the CD, and press [Enter] to power the computer off"
 
-# Copy the binaries we need
-cp -f /sbin/halt /sbin/reboot /initrd/sbin
+### screen colors
+RES_COL=65
+MOVE_TO_COL="echo -en \\033[${RES_COL}G\\033[K"
+SETCOLOR_OK="echo -en \\033[1;32m"
+SETCOLOR_FAIL="echo -en \\033[1;31m"
+SETCOLOR_WARN="echo -en \\033[1;33m"
+SETCOLOR_NORMAL="echo -en \\033[0;39m"
+SETCOLOR_CLEAR="echo -en \\033c"
+SETCOLOR_CEOL="echo -en \\033[0G\\033[K"
 
-# Find which device we want to eject:
-#DEVICE=`cat /proc/mounts | grep /initrd$MNTCDROM | awk '{ print \$1 }'`
+
+### print a success msg
+printok() {
+	$MOVE_TO_COL
+	echo -n "[  "
+	$SETCOLOR_OK
+	echo -n "OK"
+	$SETCOLOR_NORMAL
+	echo "  ]"
+	return 0
+}
+
+### print a fialure msg
+printfail() {
+	$MOVE_TO_COL
+	echo -n "["
+	$SETCOLOR_FAIL
+	echo -n "FAILED"
+	$SETCOLOR_NORMAL
+	echo "]"
+	return 0
+}
+
+### execute a command/commands printing the sucess or failure msg on completion
+docmd() {
+	echo -n "$1: "
+	shift
+	CMD="($1)"
+	shift
+	while [ $# -gt 0 ]; do
+		CMD="$CMD && ($1)"
+		shift
+	done
+	(eval "$CMD") 2>&1 >/dev/null && printok || printfail
+}
+
+# Copy the binaries we need
+docmd   "Copying halt and reboot binaries" \
+	"cp -f /sbin/halt /sbin/reboot /initrd/sbin"
 
 # move our /proc and /dev mounts and pivot (setting correct paths)
-echo "Performing initrd pivot"
-mount -n --move /dev /initrd/dev
-mount -n --move /proc /initrd/proc
-mkdir -p /initrd/ramfs
-/initrd/sbin/pivot_root /initrd /initrd/ramfs
+docmd   "Performing initrd pivot" \
+	"mkdir -p /initrd/ramfs" \
+	"/initrd/sbin/pivot_root /initrd /initrd/ramfs" \
+	"umount /ramfs/proc"
 
-echo "Unmounting $MNTLIVECD"
-umount $MNTLIVECD 2>/dev/null
+docmd   "Unmounting $MNTLIVECD" \
+	"umount $MNTLIVECD 2>/dev/null"
 
 # Unload the cloop module before trying to umount/eject CD
-echo "Removing cloop module"
-losetup -d /dev/cloop/0 2>/dev/null
-rmmod cloop 2>/dev/null
+docmd   "Removing cloop module" \
+	"losetup -d /dev/cloop/0" \
+	"rmmod cloop >/dev/null 2>/dev/null"
 
 # Turn on autoeject of CD-Rom
 # (Stolen from the knoppix-reboot script)
 for dev in /proc/sys/dev/cdrom*/lock; do
-	[ -f "$dev" ] && echo 0 > "$dev";
+	[ -f "$dev" ] && echo 0 > "$dev"
 done
 if [ -n "$EJECT" ]; then
 	for dev in /proc/sys/dev/cdrom*/autoeject; do
-		[ -f "$dev" ] && echo 1 > "$dev";
+		[ -f "$dev" ] && echo 1 > "$dev"
 	done
 fi
 
-echo "Unmounting $MNTCDROM"
-umount $MNTCDROM 2>/dev/null
+docmd   "Unmounting $MNTCDROM" \
+	"umount $MNTCDROM"
 
 # We can unmount proc now
-echo "Unmounting /proc"
-umount /proc 2>/dev/null
+docmd   "Unmounting /proc" \
+	"umount /proc"
 
 # Hope this works ;-)
-$CMD -i -d -p >/dev/null 2>/dev/null
+[ -z "$HALTCMD" ] && HALTCMD=/sbin/halt
+echo -n "Please stand by... "
+exec $HALTCMD -i -d -p
