--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -2,6 +2,7 @@
 #
 # LiveCD startup (linuxrc) script
 # Copyright (C) 2002-2003, Jaco Greeff <jaco@linuxminicd.org>
+# Copyright (C) 2003, Buchan Milne <bgmilne@cae.co.za>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -20,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.49 2003/12/13 18:13:05 jaco Exp $
+# $Id: linuxrc.in,v 1.50 2003/12/14 06:38:05 jaco Exp $
 #
 
 ### global variables
