--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -2,6 +2,7 @@
 #
 # LiveCD iso build script
 # Copyright (C) 2002-2003, Jaco Greeff <jaco@linuxminicd.org>
+# Copyright (C) 2003, Buchan Milne <bgmilne@cae.co.za>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -20,7 +21,7 @@
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: mklivecd.in,v 1.67 2003/12/13 18:13:05 jaco Exp $
+# $Id: mklivecd.in,v 1.68 2003/12/14 06:38:05 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
